--- a/listadosv.html
+++ b/listadosv.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./tarjetas.css">
     <title>RUSTServerList.com</title>
 </head>
 <body>
     <header>
-        <img src="..\img\RUinicio.jpg" alt="TopImg">
+        <figure>
+            <img class="img_header" src="./img/RUinicio.jpg" alt="TopImg">
+        </figure>
+        
         <br>
+        <h2>SERVIDORES DISPONIBLES</h2>
         <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="listadosv.html">LISTA DE SERVIDORES</a></li>
             <li><a href="contacto.html">CONTACTO</a></li>
         </ul>
-        <h2>SERVIDORES DISPONIBLES</h2>
+        
     </header>
 
     <main>
