--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <header>
-        <img src="..\img\RUinicio.jpg" alt="TopImg">
+        <figure>
+            <img src="./img/RUinicio.jpg" alt="TopImg">
+        </figure>
+        
         <h1>Soporte</h1>
         <ul>
             <li><a href="index.html">HOME</a></li>
