--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="tarjetas.css">
     <title>RUSTServerList.com</title>
 </head>
 <body>
     <header>
-        <img src="..\img\RUinicio.jpg" alt="TopImg">
+        <figure class="main-index__imagen">
+            <img src="./img/RUinicio.jpg" alt="TopImg">
+        </figure>
+        
         <h1>Bienvenido a nuestra página de servidores</h1>
         <ul>
             <li><a href="index.html">HOME</a></li>
