--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <figure>
+        <figure class="img-principal">
             <img src="./img/RUinicio.jpg" alt="TopImg">
         </figure>
         
@@ -39,7 +39,7 @@
         </form>
     </main>
 
-    <footer>
+    <footer class="footer_gral">
         <p>Autor: Verdu Gaspar</p>
     </footer>
     
