--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <figure class="main-index__imagen">
+        <figure class="img-principal">
             <img src="./img/RUinicio.jpg" alt="TopImg">
         </figure>
         
@@ -36,7 +36,7 @@
         </ul>
     </main>
 
-    <footer>
+    <footer class="footer_gral">
         <P>Autor: Verdu Gaspar</P>
         <a href="contacto.html">Contactanos</a>
     </footer>
