--- a/listadosv.html
+++ b/listadosv.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <figure>
-            <img class="img_header" src="./img/RUinicio.jpg" alt="TopImg">
+        <figure class="img-principal">
+            <img src="./img/RUinicio.jpg" alt="TopImg">
         </figure>
         
         <br>
@@ -24,32 +24,31 @@
 
     <main>
         <div class="servers-global">
-
-            <div class="server-card">
-                <div class="server-name">Servidor Épico de Rust</div>
-                <div class="server-players">Jugadores en línea: 50/100</div>
-                <div class="server-ip">Dirección IP: 123.45.67.89:27015</div>
-                <div><a href="">CONNECT</a></div>
+            <div class="card">
+                <div class="card__name">Servidor Épico de Rust</div>
+                <div class="card__players">Jugadores en línea: 50/100</div>
+                <div class="card__ip">Dirección IP: 123.45.67.89:27015</div>
+                <div class="card__link"><a href="">CONNECT</a></div>
             </div>
             <br>
-            <div class="server-card">
-                <div class="server-name">Servidor Épico de Rust</div>
-                <div class="server-players">Jugadores en línea: 78200</div>
-                <div class="server-ip">Dirección IP: 123.45.67.89:27016</div>
-                <div><a href="">CONNECT</a></div>
+            <div class="card">
+                <div class="card__name">Servidor Épico de Rust</div>
+                <div class="card__players">Jugadores en línea: 78200</div>
+                <div class="card__ip">Dirección IP: 123.45.67.89:27016</div>
+                <div class="card__link"><a href="">CONNECT</a></div>
             </div>
             <br>
-            <div class="server-card">
-                <div class="server-name">Servidor Épico de Rust</div>
-                <div class="server-players">Jugadores en línea: 183/350</div>
-                <div class="server-ip">Dirección IP: 123.45.67.89:27017</div>
-                <div><a href="">CONNECT</a></div>
+            <div class="card">
+                <div class="card__name">Servidor Épico de Rust</div>
+                <div class="card__players">Jugadores en línea: 183/350</div>
+                <div class="card__ip">Dirección IP: 123.45.67.89:27017</div>
+                <div class="card__link"><a href="">CONNECT</a></div>
             </div>
             
         </div>
     </main>
 
-    <footer>
+    <footer class="footer_gral">
         <p>Autor: Verdu Gaspar</p>
         <a href="contacto.html">Contactanos</a>
     </footer>
