css pag principal

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
     <header>
         <figure class="img-principal">
-            <img src="./img/RUinicio.jpg" alt="TopImg">
+            <img src="./img/logoRustCh.jpg" alt="TopImg">
         </figure>
         
-        <h1>Bienvenido a nuestra página de servidores</h1>
+        <h1 class="titulo-header">Bienvenido a nuestra página de servidores</h1>
         <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="listadosv.html">LISTA DE SERVIDORES</a></li>
-            <li><a href="contacto.html">CONTACTO</a></li>
+            <li ><a href="index.html" class="link__header">Home</a></li>
+            <li ><a href="listadosv.html" class="link__header">Servidores disponibles</a></li>
+            <li ><a href="contacto.html" class="link__header">Contacto</a></li>
         </ul>
     </header>
     <main>
-        <h2>¡Bienvenido a RUST! </h2>
-        <p>
+        <h2 class="titulo-main">¡Bienvenido a RUST! </h2>
+        <p class="parrafo-main">
             En este vasto y despiadado mundo, te espera una experiencia única y desafiante. Rust te sumerge en un ambiente implacable y primitivo, donde la supervivencia es tu única prioridad. Desde el momento en que despiertes en una costa desconocida, 
             deberás aprender a sobrevivir, construir, luchar y prosperar.
             <br>
@@ -29,16 +29,18 @@
             pero también tus aliados en tu búsqueda por la supervivencia.
         </p>
 
-        <h2>Descubre los mejores servidores de RUST en latinoamérica y el mundo.</h2>
-        <p>Diseñado para ayudarte a encontrar el mejor servidor para experimentar la emoción de RUST en su maxima expresión</p>
+        <h2 class="titulo-main">Descubre los mejores servidores de RUST en latinoamérica y el mundo.</h2>
+        <p class="parrafo-main">Diseñado para ayudarte a encontrar el mejor servidor para experimentar la emoción de RUST en su maxima expresión</p>
         <ul>
-            <a href="listadosv.html">¡VAMOS ALLA!</a>
+            <a href="listadosv.html" class="link__header">¡VAMOS ALLÁ!</a>
         </ul>
     </main>
 
     <footer class="footer_gral">
-        <P>Autor: Verdu Gaspar</P>
-        <a href="contacto.html">Contactanos</a>
+        
+        <P class="footer__parrafo">Autor: Verdu Gaspar</P>
+        <img src="./img/pngchikito.png" alt="logoPNG">
+        <a href="contacto.html" class="footer__link">Contactanos</a>
     </footer>
 </body>
 </html>
