--- a/listadosv.html
+++ b/listadosv.html
@@ -13,7 +13,7 @@
         </figure>
         
         <br>
-        <h2>SERVIDORES DISPONIBLES</h2>
+        <h1>Servidores disponibles</h1>
         <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="listadosv.html">LISTA DE SERVIDORES</a></li>
