--- a/listadosv.html
+++ b/listadosv.html
@@ -44,6 +44,25 @@
                 <div class="card__ip">Dirección IP: 123.45.67.89:27017</div>
                 <div class="card__link"><a href="">CONNECT</a></div>
             </div>
+            <div class="card">
+                <div class="card__name">Servidor Épico de Rust</div>
+                <div class="card__players">Jugadores en línea: 50/100</div>
+                <div class="card__ip">Dirección IP: 123.45.67.89:27015</div>
+                <div class="card__link"><a href="">CONNECT</a></div>
+            </div>
+            <br><div class="card">
+                <div class="card__name">Servidor Épico de Rust</div>
+                <div class="card__players">Jugadores en línea: 50/100</div>
+                <div class="card__ip">Dirección IP: 123.45.67.89:27015</div>
+                <div class="card__link"><a href="">CONNECT</a></div>
+            </div>
+            <br>
+            <div class="card">
+                <div class="card__name">Servidor Épico de Rust</div>
+                <div class="card__players">Jugadores en línea: 50/100</div>
+                <div class="card__ip">Dirección IP: 123.45.67.89:27015</div>
+                <div class="card__link"><a href="">CONNECT</a></div>
+            </div>
             
         </div>
     </main>
