--- a/contacto.html
+++ b/contacto.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>RUSTServerList</title>
 </head>
 <body>
     <header>
         <figure class="img-principal">
-            <img src="./img/logoRustCh.jpg" alt="TopImg">
+            <img src="./assets/img/logoRustCh.jpg" alt="TopImg">
         </figure>
         
         <h1 class="titulo-header">Soporte</h1>
@@ -59,7 +59,7 @@
 
     <footer class="footer_gral">
         <p class="footer__parrafo">Autor: Verdu Gaspar</p>
-        <img src="./img/pngchikito.png" alt="logoPNG">
+        <img src="./assets/img/pngchikito.png" alt="logoPNG">
     </footer>
     
 </body>
