--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script type="module" src="principal.js"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <script type="module" src="./assets/javascript/principal.js"></script>
     <title>RUSTServerList.com</title>
 </head>
 <body>
     <header>
         <figure class="img-principal">
-            <img src="./img/logoRustCh.jpg" alt="TopImg">
+            <img src="./assets/img/logoRustCh.jpg" alt="TopImg">
         </figure>
         
         <h1 class="titulo-header">Bienvenido a nuestra página de servidores</h1>
@@ -40,7 +40,7 @@
     <footer class="footer_gral">
         
         <P class="footer__parrafo">Autor: Verdu Gaspar</P>
-        <img src="./img/pngchikito.png" alt="logoPNG">
+        <img src="./assets/img/pngchikito.png" alt="logoPNG">
         <a href="contacto.html" class="footer__link">Contactanos</a>
     </footer>
 </body>
