--- a/listadosv.html
+++ b/listadosv.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <script type="module" src="servidores.js"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <script type="module" src="./assets/javascript/servidores.js"></script>
     <title>RUSTServerList.com</title>
 </head>
 <body>
     <header>
         <figure class="img-principal">
-            <img src="./img/logoRustCh.jpg" alt="TopImg">
+            <img src="./assets/img/logoRustCh.jpg" alt="TopImg">
         </figure>
         
         <br>
@@ -36,14 +36,14 @@
                 <div class="card__name">Servidor Épico de Rust</div>
                 <div class="card__players">Jugadores en línea: 78/200</div>
                 <div class="card__ip">Dirección IP: 123.45.67.89:27016</div>
-                <div class="card__link" :hover><a href="">CONNECT</a></div>
+                <div class="card__link" :hover><a href="https://rust.facepunch.com/">CONNECT</a></div>
             </div>
             <br>
             <div class="card">
                 <div class="card__name">Servidor Épico de Rust</div>
                 <div class="card__players">Jugadores en línea: 183/350</div>
                 <div class="card__ip">Dirección IP: 123.45.67.89:27017</div>
-                <div class="card__link"><a href="">CONNECT</a></div>
+                <div class="card__link"><a href="https://rust.facepunch.com/">CONNECT</a></div>
             </div>
             <div class="card">
                 <div class="card__name">Servidor Épico de Rust</div>
@@ -70,7 +70,7 @@
 
     <footer class="footer_gral">
         <p class="footer__parrafo">Autor: Verdu Gaspar</p>
-        <img src="./img/pngchikito.png" alt="logoPNG">
+        <img src="./assets/img/pngchikito.png" alt="logoPNG">
         <a href="contacto.html" class="footer__link">Contactanos</a>
     </footer>
 </body>
