--- a/listadosv.html
+++ b/listadosv.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script type="module" src="./assets/javascript/servidores.js"></script>
+    <script type="module" src="./assets/javascript/principal.js"></script>
     <title>RUSTServerList.com</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-        <div class="servers-global">
+        <div id="contenedor" class="servers-global">
             <div class="card">
                 <div class="card__name">Servidor Épico de Rust</div>
                 <div class="card__players">Jugadores en línea: 50/100</div>
